PyBay/webpack/scss/main.scss
/* ... */
.google-custom-search .search-usage-info {
  text-align: right;
  font-size: 13px;
  padding-top: 5px;
}

/* gitter */
aside.gitter-chat-embed {
  z-index: 10000;
}

button.js-gitter-toggle-chat-button {
  color: white;
  border: none;
  cursor: pointer;
  position: fixed;
  right: 10px;
  bottom: 0;
  background-color: $brand-primary;
  font-family: $font-family-base;
  font-weight: bold;
  padding: 7px 20px;
  text-transform: none;
  letter-spacing: 0;
  font-size: 15px;

  &:hover {
    background-color: darken($brand-primary, 15);
    text-decoration: none;
  }
}

/* Sponsor list */
.gold-sponsors .sponsor-list {
  /*background: hsl(0, 50%, 50%);
  color: white; */
}

.sponsor-list {
  display: flex;
  flex-wrap: wrap;
}

.Gold .sponsor-list {
  --angle: 0deg;
  border: 15px solid gold;
  border-image: conic-gradient(from var(--angle), white, gold) 1;
  animation: 4s rotategrad linear infinite;
}

@keyframes rotategrad {
  to {
    --angle: 360deg;
  }
}
@property --angle {
  syntax: '<angle>';
  initial-value: 0deg;
  inherits: false;
}

.Gold img {
  width: 50%
}

.Silver .sponsor-list {
  --angle: 0deg;
  border: 15px solid silver;
  border-image: conic-gradient(from var(--angle), white, silver) 1;
  animation: 4s rotategrad linear infinite;
}

.Silver img {
  width: 25%
}

.Bronze .sponsor-list {
  --angle: 0deg;
  border: 15px solid #cd7f32;
  border-image: conic-gradient(from var(--angle), white, #cd7f32) 1;
  animation: 4s rotategrad linear infinite;
}

.Bronze img {
  width: 25%
}
.Community img {
  width: 20%
}
.Diversity img {
  width: 20%
}

.sponsor-list-page .sl-group:first-child > .container {
  padding-top: 55px;
}

.sl-group section {
  padding: 30px 0;
}

.sl-group .subscribe-2 {
  clear: both;
  background-color: #f5f5f5;
}
.sl-group-heading p:first-child {
  margin-top: 20px;
}
.sl-group-heading h1:first-child {
  margin-top: 42px;
}

.sl-sponsor {
  flex-basis: 50%;
  padding: 20px;
  display: flex;
}

.sl-logo {
  flex: 0 0 200px;
  height: 200px;
}

.sl-blurb {
  flex-grow: 1;
  margin: 0 10px;
}

.sl-blurb h3 a {
  color: hsl(0, 0%, 10%);
  font-size: 25px;
  font-weight: bold;
}

@media(max-width: 1000px) {
  .sponsor-list, .sl-sponsor {
    display: block;
  }

  .sl-blurb h3 {
    margin-top: 20px;
  }

  .sl-sponsor {
    text-align: center;
  }
  .sl-logo img {
    max-height: 250px
  }
  .sl-blurb {
    text-align: left;
  }
}

.sponsor-footer-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.footer-sponsor {
  position: relative;
  margin: 10px;
}

.footer-sponsor a {
  display: flex;
  align-items: center;
  height: calc(100% - 20px);
}

/* Responsive Google Slides, Google Maps, YouTube & Vimeo */
iframe[src*="docs.google.com"],
iframe[src*="google.com/maps"],
iframe[src*="youtube.com"],
iframe[src*="player.vimeo.com"]{
  width: 100%;
  height: auto;
  aspect-ratio: 16 / 9;
}

@media (max-width: 1000px) {
  video {
    display: none;
  }
}

.navbar-brand {
  padding: 0px; /* firefox bug fix */
}
.navbar-brand>img {
  height: 100%;
  padding: 15px; /* firefox bug fix */
  width: auto;
  max-width: 240px;
}

.icon-bar {
    font-size: 28px;
    a {
      margin-right: 10px;
      text-decoration: none;
    }
  }

